tests/src/frontend/syntax/invalid/when_clause_after_paren.sk
class X<T>() {
  fun a<U>()[T: Show]: String {
    ""
  }
}
